[package]
name = "chip8-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
clap = { version = "3.2.8", features = ["derive"] }
eframe = "0.18.0"
phf = { version = "0.10.1", features = ["macros"] }
rfd = "0.9.1"
log = "0.4.17"
getrandom = { version = "0.2.7", features = ["js"] }
tokio = { version = "1.19.2", features = ["full"] }
async-trait = "0.1.56"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
